--- a/style.css
+++ b/style.css
@@ -1,2 +1,5 @@
 <background-color: #2a2a2a;>
 h1 {font: "Verdana", sans-serif, color: #730000;}
+body {
+  color: #ff0000, font: "Verdana, sans-serif, font-size: 4em;
+}
