--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-h1 {font: "Verdana", sans-serif, color: #730000;}
+h1 {
+  font: "Verdana", sans-serif, color: #730000;}
 body {
   background-color: #2a2a2a, color: #ff0000, font: "Verdana, sans-serif, font-size: 4em;
 }
